--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "backend_proyectogrupal",
+  "name": "backend_g5-.1",
   "version": "1.0.0",
-  "description": "Proyecto Gestion RRHH",
+  "description": "",
   "license": "ISC",
-  "author": "Grupo 5 (Stan)",
+  "author": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+    
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mysql2": "^3.14.4"
+    "mysql2": "^3.15.1"
   }
 }
