--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "backend_g5-.1",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/stalingYZFR6/Backend_G5#readme",
+  "bugs": {
+    "url": "https://github.com/stalingYZFR6/Backend_G5/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stalingYZFR6/Backend_G5.git"
+  },
   "license": "ISC",
   "author": "",
   "type": "module",
